[gd_scene load_steps=14 format=3 uid="uid://bmaajevpcpudt"]

[ext_resource type="Script" path="res://Interactables/TreasureChest/treasure_chest.gd" id="1_cc5fc"]
[ext_resource type="Texture2D" uid="uid://dms6bjkb2yjyp" path="res://Interactables/TreasureChest/treasure-chest.png" id="2_g5ogi"]
[ext_resource type="Texture2D" uid="uid://bboulfueoy37e" path="res://Items/Sprites/items.png" id="3_ok405"]
[ext_resource type="AudioStream" uid="uid://bb4o6wbphe1uv" path="res://Interactables/TreasureChest/treasure-open.wav" id="4_4x6qg"]
[ext_resource type="PackedScene" uid="uid://dfcusshnoq3n1" path="res://Components/PersistantDataHandler/persistant_data_handler.tscn" id="5_pwxi7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f10is"]
atlas = ExtResource("3_ok405")
region = Rect2(0, 0, 32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hoyau"]
size = Vector2(37, 17.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0h8ht"]
size = Vector2(32, 10)

[sub_resource type="Animation" id="Animation_s55bu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ItemSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -19)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ItemSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qyrqb"]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_47mdo"]
resource_name = "open_chest"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_4x6qg")
}],
"times": PackedFloat32Array(0.1)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ItemSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5, 1.5),
"transitions": PackedFloat32Array(0.5, -2, 1, 1),
"update": 0,
"values": [Vector2(0, -20), Vector2(0, -65), Vector2(0, -55), Vector2(0, -55)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ItemSprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_exrky"]
resource_name = "opened"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4fagl"]
_data = {
"RESET": SubResource("Animation_s55bu"),
"closed": SubResource("Animation_qyrqb"),
"open_chest": SubResource("Animation_47mdo"),
"opened": SubResource("Animation_exrky")
}

[node name="TreasureChest" type="Node2D"]
process_mode = 3
script = ExtResource("1_cc5fc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, -19)
texture = ExtResource("2_g5ogi")
hframes = 2

[node name="ItemSprite" type="Sprite2D" parent="."]
position = Vector2(0, -19)
texture = SubResource("AtlasTexture_f10is")

[node name="Label" type="Label" parent="ItemSprite"]
offset_left = 6.0
offset_top = -11.0
offset_right = 46.0
offset_bottom = 12.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_hoyau")
debug_color = Color(0.3397, 0.60756, 0.379442, 0.42)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-1, -3)
shape = SubResource("RectangleShape2D_0h8ht")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4fagl")
}
autoplay = "closed"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="IsOpen" parent="." instance=ExtResource("5_pwxi7")]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
